--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,28 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+  <ion-toolbar color="dark" mode="ios">
+    <ion-title> Tarefas </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-fab class="ion-margin" mode="ios" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button id="present-alert" color="danger">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-alert
+    mode="ios"
+    trigger="present-alert"
+    header="Adicionar Tarefa"
+    [buttons]="alertButtons"
+    [inputs]="alertInputsAdd"
+  ></ion-alert>
+  <ion-toast
+    mode="ios"
+    position="middle"
+    [isOpen]="isToastOpen"
+    message="[ERRO] Informe Tarefa e Data!"
+    [duration]="3000"
+    (didDismiss)="setOpen(false)"
+  ></ion-toast>
 </ion-content>
