lista com botões slide

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,39 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-fab class="ion-margin" mode="ios" vertical="bottom" horizontal="end" slot="fixed">
+  <ion-list mode="ios">
+    <ion-item-sliding
+      *ngFor="let task of taskService.getTasks(); let i = index"
+      mode="ios"
+      pager="ios"
+      scrollbar="ios"
+    >
+      <ion-item>
+        <ion-label>{{task.value}}</ion-label>
+        <ion-checkbox
+          slot="start"
+          aria-label="done"
+          [(ngModel)]="task.done"
+        ></ion-checkbox>
+        <ion-badge color="warning" mode="ios" *ngIf="task.date.getDate()">
+          {{task.date.getDate() + "/" + (task.date.getMonth()+1) + "/" +
+          task.date.getFullYear()}}
+        </ion-badge>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger"><ion-icon size="small" slot="icon-only" name="trash-outline"></ion-icon></ion-item-option>
+        <ion-item-option><ion-icon size="small" slot="icon-only" name="create-outline"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-fab
+    class="ion-margin"
+    mode="ios"
+    vertical="bottom"
+    horizontal="end"
+    slot="fixed"
+  >
     <ion-fab-button id="present-alert" color="danger">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
@@ -18,6 +50,7 @@
     [inputs]="alertInputsAdd"
   ></ion-alert>
   <ion-toast
+    color="danger"
     mode="ios"
     position="middle"
     [isOpen]="isToastOpen"
